ECSITE-14:管理者として、ユーザーアカウントを管理したい(中間コミット1)
